refactor(app): introduce modular architecture
This commit introduces a significant refactoring of the application to establish a more modular architecture. Key changes include:

- **Actor Module:** A new `actor` module has been created to consolidate all user-related entities, including customers, staff, and bots. This improves separation of concerns and prepares the ground for more advanced actor-based features.

- **Product Module Refactoring:** The `product` module has been restructured. `Category` and `ProductVariant` are now sub-packages within the product module, leading to a more organized and intuitive structure.

- **Configuration Refactoring:** All configuration files have been centralized in a dedicated `config` package, simplifying maintenance and improving discoverability.

- **Digital Media Enhancements:** The digital media handling capabilities have been improved, with updates to the `file` package to support the new modular architecture.

- **Search Functionality:** The search functionality has been updated, with changes to the ANTLR grammar and related services.

This refactoring lays the foundation for a more scalable and maintainable application, enabling faster development and easier onboarding of new developers.